EM-6813 fix func code smells (#2685)